--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
         <!-- Hero Section -->
         <section id="hero" class="relative py-20 md:py-32 flex items-center justify-center text-center overflow-hidden">
             <div class="absolute inset-0">
-                <img src="https://i.ibb.co/LzYmXF5f/Gemini-Generated-Image-mxermsmxermsmxer.png" alt="A group of people working together in an office environment with a large window in the background." class="w-full h-full object-cover">
-                <div class="absolute inset-0 bg-gray-900 opacity-70"></div>
+                <img src="https://i.ibb.co/LzYmXF5f/Gemini-Generated-Image-mxermsmxermsmxer.png" alt="A group of people working together in an office environment with a large window in the background." class="w-full h-full object-cover">                <div class="absolute inset-0 bg-gray-900 opacity-70"></div>
             </div>
             <div class="relative z-10 max-w-4xl mx-auto px-4 space-y-6">
                 <h1 class="text-5xl md:text-7xl font-extrabold leading-tight text-white tracking-tight">
@@ -338,6 +337,10 @@
                                 <p>Participants act as consultants tasked with designing and prototyping an AI-powered solution that improves efficiency and patient outcomes in a mid-sized hospital network.</p>
                             </div>
                             <div class="mt-4">
+                                <h4 class="font-bold text-white">Presentation File:</h4>
+                                <a href="https://drive.google.com/file/d/1mokTHBgFETla7IQJqw157m8Yt87wC9nY/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="text-teal-400 hover:underline">View Presentation</a>
+                            </div>
+                            <div class="mt-4">
                                 <h4 class="font-bold text-white">Desired Outcome:</h4>
                                 <p>The possible outcomes are diverse — ranging from an AI agent that optimizes patient scheduling, to an assistant that helps doctors monitor the healing process of post-surgery scars.</p>
                             </div>
@@ -366,6 +369,10 @@
                             <div class="mt-4">
                                 <h4 class="font-bold text-white">Challenge Submission:</h4>
                                 <p>Europe’s fertility rate is at historic lows, and young adults are increasingly delaying or avoiding parenthood. Parents face long childcare waitlists, loss of income during leave, and isolation from support networks. Muxuni’s challenge for participants is to design and scale solutions that make parenting easier, safer, and more financially sustainable—removing these barriers so that more families can confidently choose to have children.</p>
+                            </div>
+                            <div class="mt-4">
+                                <h4 class="font-bold text-white">Presentation File:</h4>
+                                <a href="https://drive.google.com/file/d/1Nee8YrZ3NwAipAGcZ9atnZOKrdQ1m_wM/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="text-teal-400 hover:underline">View Presentation</a>
                             </div>
                             <div class="mt-4">
                                 <h4 class="font-bold text-white">Desired Outcome:</h4>
@@ -397,6 +404,14 @@
                                     <li>Finding ways to gain funding for the product.</li>
                                 </ul>
                             </div>
+                            <div class="mt-4">
+                                <h4 class="font-bold text-white">Presentation File:</h4>
+                                <a href="https://docs.google.com/presentation/d/1duJgCrG7s0lhq98LHWPF0eIVZVtxSKkT/edit?usp=sharing&ouid=111911593751161478526&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer" class="text-teal-400 hover:underline">View Presentation</a>
+                            </div>
+                            <div class="mt-4">
+                                <h4 class="font-bold text-white">Video:</h4>
+                                <a href="https://drive.google.com/file/u/0/d/1KVZrlEw8ENh6rep-uoAget-tzXCjN781/view?usp=sharing&pli=1" target="_blank" rel="noopener noreferrer" class="text-teal-400 hover:underline">Watch Video</a>
+                            </div>
                         </div>
                     </div>
                     <!-- Case 5: Tuohia Oy -->
@@ -410,6 +425,10 @@
                             <div class="mt-4">
                                 <h4 class="font-bold text-white">Challenge Submission:</h4>
                                 <p>How to get more orders to webshop? Tuohia have good quantity of visitors in webshop, Facebook and Instagram platform, but too few orders is coming. Tuohia have nice products what are only available in Tuohia webshop, how to make marketing more interesting and how to give good interesting product information what leeds to order. How to make for web shop visitor clear the benefits of Tuohia products?</p>
+                            </div>
+                            <div class="mt-4">
+                                <h4 class="font-bold text-white">Presentation File:</h4>
+                                <a href="https://docs.google.com/presentation/d/1NIhTzrkbJtfSml0oA2U-7qYysuiKf2C6/edit?usp=sharing&ouid=111911593751161478526&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer" class="text-teal-400 hover:underline">View Presentation</a>
                             </div>
                             <div class="mt-4">
                                 <h4 class="font-bold text-white">Desired Outcome:</h4>
@@ -429,6 +448,14 @@
                                 <p>A new M&A assessment tool for entrepreneurs to check their company's "Salesfit".</p>
                                 <p class="mt-2">Entrepreneurs, especially for small-sized companies, don't know or can't estimate themselves in what kind of shape their business is concerning a corporate transaction. We would like to create a form that is easy to use, with a questionnaire they can fill out. After that, the form, using an AI, suggests what is need to be done. Segments and questions can be for example financial, legal, IPR, ESG, variance of customers, employees, etc. After the fixing has been done inside the company, the entrepreneur who is selling their company can achieve a better valuation and get more interested buyers to negotiate.</p>
                             </div>
+                            <div class="mt-4">
+                                <h4 class="font-bold text-white">Presentation File:</h4>
+                                <a href="https://drive.google.com/file/d/1H25tjbPw1p3XKDss_ndgho7Q1Qp2y4Jo/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="text-teal-400 hover:underline">View Presentation</a>
+                            </div>
+                            <div class="mt-4">
+                                <h4 class="font-bold text-white">Example:</h4>
+                                <p>One example what kind of tool has been made by SEamk for companies salesfit you can find here: <a href="https://projektit.seamk.fi/yrittajyys-ja-kasvu/yrityksen-ostokatsastus/" target="_blank" rel="noopener noreferrer" class="text-teal-400 hover:underline">Yrityksen Ostokatsastus</a></p>
+                            </div>
                         </div>
                     </div>
                     <!-- Case 7: Witas -->
@@ -438,11 +465,15 @@
                         <div id="witas-details" class="mt-4 space-y-2 text-sm text-gray-300 hidden">
                             <p><strong>Website:</strong> <a href="https://witas.fi" target="_blank" rel="noopener noreferrer" class="text-teal-400 hover:underline">witas.fi</a></p>
                             <p><strong>Contact Person:</strong> Sani</p>
-                            <div class="mt-4">
+                            <div class="mt-4 space-y-1">
                                 <h4 class="font-bold text-white">Challenge Submission:</h4>
                                 <p>Your mission is to design and build a web-based dashboard with two distinct interfaces: one for the Admin and one for the Trainee. The platform must be robust, intuitive, and serve as the single source of truth for all trainee-related activities.</p>
-                                <p class="mt-2">The trainee dashboard is a personalized hub designed for productivity and growth. It empowers trainees to take ownership of their work, seek help when needed, and clearly report their achievements.</p>
-                                <p class="mt-2">The second challenge is to build and launch an intelligent AI chatbot on the Telegram platform. This bot will act as an instant, on-demand guide for the Witas community, answering questions and providing information directly within their favorite messaging app.</p>
+                                <p>The trainee dashboard is a personalized hub designed for productivity and growth. It empowers trainees to take ownership of their work, seek help when needed, and clearly report their achievements.</p>
+                                <h5 class="font-bold text-white mt-2">Case 1: Student Dashboard</h5>
+                                <a href="https://gamma.app/docs/AI-Hackathon-Case-Study-The-Smart-Trainee-Dashboard-4rfngoahuyeocy5" target="_blank" rel="noopener noreferrer" class="text-teal-400 hover:underline">View Case 1 Details</a>
+                                <h5 class="font-bold text-white mt-2">Case 2: AI Agent</h5>
+                                <p>The second challenge is to build and launch an intelligent AI chatbot on the Telegram platform. This bot will act as an instant, on-demand guide for the Witas community, answering questions and providing information directly within their favorite messaging app.</p>
+                                <a href="https://gamma.app/docs/Hackathon-Task-2-Witas-AI-Assistant-for-Telegram--9ejgjx2q1lhzdnz" target="_blank" rel="noopener noreferrer" class="text-teal-400 hover:underline">View Case 2 Details</a>
                             </div>
                         </div>
                     </div>
