--- a/index.html
+++ b/index.html
@@ -357,6 +357,10 @@
                                 <h4 class="font-bold text-white">Challenge Submission:</h4>
                                 <p>I expect a fully finished website, professional creative design for my company.</p>
                             </div>
+                            <div class="mt-4">
+                                <h4 class="font-bold text-white">Presentation File:</h4>
+                                <a href="https://jamkstudent-my.sharepoint.com/:b:/r/personal/anna_tenhunen_jamk_fi/Documents/Attachments/VidSoftMon_Presentation.pdf?csf=1&web=1&e=XFvWnD" target="_blank" rel="noopener noreferrer" class="text-teal-400 hover:underline">View Presentation File</a><br><br>
+                            </div>
                         </div>
                     </div>
                     <!-- Case 3: Muxuni -->
