--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                             </div>
                             <div class="mt-4">
                                 <h4 class="font-bold text-white">Presentation File:</h4>
-                                <a href="https://jamkstudent-my.sharepoint.com/:b:/r/personal/anna_tenhunen_jamk_fi/Documents/Attachments/VidSoftMon_Presentation.pdf?csf=1&web=1&e=XFvWnD" target="_blank" rel="noopener noreferrer" class="text-teal-400 hover:underline">View Presentation File</a><br><br>
+                                <a href="https://drive.google.com/file/d/1VYU9G9WRQ75cTM_dHJfjIOJ5DkXvqoJA/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="text-teal-400 hover:underline">View Presentation File</a><br><br>
                             </div>
                         </div>
                     </div>
