--- a/index.html
+++ b/index.html
@@ -237,7 +237,6 @@
                         <ul class="mt-4 space-y-1 text-gray-300">
                             <li>Negin Hamian</li>
                             <li>Shariff Kwizera Sano</li>
-                            <li>Amirreza Salehpour</li>
                             <li>Vishodha Silva</li>
                             <li>Fahima Akter</li>
                             <li>Nasrin Razavi Miyandeh</li>
@@ -296,11 +295,11 @@
                         <h3 class="font-bold text-xl text-white">Keski-Suomen Yrittäjät</h3>
                         <ul class="mt-4 space-y-1 text-gray-300">
                             <li>Yaroslav Romashko</li>
-                            <li>Mohammad Imranul Ferdoues</li>
-                            <li>Muhammad Feroz</li>
-                            <li>Maha Abdo</li>
+                            <li> Hossein Taban</li>
                             <li>Meraj Heydari</li>
+                            <li>Maha Abdo</li>
                             <li>Zuhaib Alam</li>
+                            <li>Mohammad Imranul Ferdoues</li>
                         </ul>
                     </div>
                      <!-- Team: Witas -->
@@ -308,6 +307,7 @@
                         <h3 class="font-bold text-xl text-white">Witas</h3>
                         <ul class="mt-4 space-y-1 text-gray-300">
                             <li>Saira Zuhaib</li>
+                            <li>Muhammad Feroz</li>
                             <li>Negar Hossein-nezhad Daneshvar</li>
                             <li>Firat Eren</li>
                             <li>Sandun Thilakarathna</li>
