--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
                     <div class="bg-gray-700 p-6 rounded-xl shadow-lg">
                         <h3 class="font-bold text-xl text-white">Mistix (AI Consulting)</h3>
                         <ul class="mt-4 space-y-1 text-gray-300">
+                            <li>Danial Farooq</li>
                             <li>Negin Hamian</li>
                             <li>Shariff Kwizera Sano</li>
                             <li>Vishodha Silva</li>
@@ -248,7 +249,6 @@
                         <ul class="mt-4 space-y-1 text-gray-300">
                             <li>Md Nazmul Alom</li>
                             <li>Rehnuma Heikintalo</li>
-                            <li>Danial Farooq</li>
                             <li>Mst Jannatul Tazrin Riya</li>
                             <li>Bernard Enning</li>
                         </ul>
@@ -283,6 +283,7 @@
                         <h3 class="font-bold text-xl text-white">Tuohia Oy (Webshops)</h3>
                         <ul class="mt-4 space-y-1 text-gray-300">
                             <li>Abdullah Azam</li>
+                            <li>Danial Farooq</li>
                             <li>Dang Le</li>
                             <li>Hasan Chaudry</li>
                             <li>Mohammad Ghafouri Varzaneh</li>
@@ -300,6 +301,8 @@
                             <li>Maha Abdo</li>
                             <li>Zuhaib Alam</li>
                             <li>Mohammad Imranul Ferdoues</li>
+                            <li>Zahid Fahad</li>
+
                         </ul>
                     </div>
                      <!-- Team: Witas -->
@@ -312,7 +315,9 @@
                             <li>Firat Eren</li>
                             <li>Sandun Thilakarathna</li>
                             <li>Pavithra Pujapitiyage</li>
+                            <li>Sanuja Ariyapperuma</li>
                             <li>Boon Thu</li>
+                            <li>Zahid Fahad</li>
                         </ul>
                     </div>
                 </div>
