--- a/index.html
+++ b/index.html
@@ -276,6 +276,8 @@
                             <li>Zahra Rahmani Ghobadi</li>
                             <li>Syed Ali Asmer</li>
                             <li>Muhammad Hassan Ali</li>
+                                                        <li>Dang Le</li>
+
                         </ul>
                     </div>
                     <!-- Team: Tuohia Oy -->
@@ -284,7 +286,8 @@
                         <ul class="mt-4 space-y-1 text-gray-300">
                             <li>Abdullah Azam</li>
                             <li>Danial Farooq</li>
-                            
+                            <li>Fahim Hasan Elahi</li>
+
                             <li>Hasan Chaudry</li>
                             <li>Mohammad Ghafouri Varzaneh</li>
                             <li>Fatemeh Yousefi Far</li>
@@ -313,7 +316,6 @@
                             <li>Muhammad Feroz</li>
                             <li>Negar Hossein-nezhad Daneshvar</li>
                             <li>Firat Eren</li>
-                            <li>Dang Le</li>
                             <li>Sandun Thilakarathna</li>
                             <li>Pavithra Pujapitiyage</li>
                             <li>Sanuja Ariyapperuma</li>
