--- a/index.html
+++ b/index.html
@@ -266,7 +266,9 @@
                             <li>Md Nasrul Islam</li>
                             <li>Fahim Hasan Elahi</li>
                             <li>Muhammad Hassan Ali</li>
-                            <li>Dang Le</li>
+                            <li>Boon Th</li>
+                            <li>Muntaha babar</li>
+                            <li>Abdullah Azam</li>
 
                         </ul>
                     </div>
@@ -285,7 +287,7 @@
                         <ul class="mt-4 space-y-1 text-gray-300">
                             <li>Yaroslav Romashko</li>
                             <li> Hossein Taban</li>
-                            <li>Zahid Fahad</li>
+                            <li>Zahad Fahad</li>
 
                         </ul>
                     </div>
@@ -297,7 +299,7 @@
                             <li>Sandun Thilakarathna</li>
                             <li>Pavithra Pujapitiyage</li>
                             <li>Sanuja Ariyapperuma</li>
-                            <li>Boon Thu</li>
+                            <li>Dang Le </li>
                             <li>Zahid Fahad</li>
                         </ul>
                     </div>
