--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </a>
             <div class="hidden md:flex items-center space-x-6">
                 <a href="#about" class="hover:text-teal-400 transition-colors">About</a>
+                <a href="#news" class="hover:text-teal-400 transition-colors">News</a>
                 <a href="#teams" class="hover:text-teal-400 transition-colors">Teams</a>
                 <a href="#cases" class="hover:text-teal-400 transition-colors">Cases</a>
                 <a href="#schedule" class="hover:text-teal-400 transition-colors">Schedule</a>
@@ -60,7 +61,29 @@
                 </div>
             </div>
         </section>
-
+<!-- News Section -->
+        <section id="news" class="bg-gray-900 py-16 md:py-24">
+            <div class="max-w-7xl mx-auto px-4 space-y-12 text-center">
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-100">Uutiset (News)</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 text-left">
+                    <div class="bg-gray-800 p-6 rounded-xl shadow-lg border-t-4 border-teal-500">
+                        <p class="text-sm font-semibold text-teal-400 mb-2">October 1st, 10:30</p>
+                        <h3 class="text-xl font-bold text-white mb-2">Presentations have started!</h3>
+                        <p class="text-gray-400">Teams are pitching their innovative solutions now. Good luck to all participants! Coffee is served in the main lobby.</p>
+                    </div>
+                    <div class="bg-gray-800 p-6 rounded-xl shadow-lg border-t-4 border-teal-500">
+                        <p class="text-sm font-semibold text-teal-400 mb-2">September 30th, 19:30</p>
+                        <h3 class="text-xl font-bold text-white mb-2">Evening Program is ON</h3>
+                        <p class="text-gray-400">Dinner is finished! Head over to the campsite's sauna and grill area for games and relaxation. See you there!</p>
+                    </div>
+                    <div class="bg-gray-800 p-6 rounded-xl shadow-lg border-t-4 border-teal-500">
+                        <p class="text-sm font-semibold text-teal-400 mb-2">September 30th, 9:30</p>
+                        <h3 class="text-xl font-bold text-white mb-2">Hackathon officially started!</h3>
+                        <p class="text-gray-400">The company presentations are complete. Teams can now start working on their cases in the private meeting rooms.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- About Section -->
         <section id="about" class="bg-gray-800 py-16 md:py-24">
             <div class="max-w-7xl mx-auto px-4 space-y-12 text-center">
