--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
                         <h3 class="text-xl font-bold text-white mb-2">Evening Program is ON</h3>
                         <p class="text-gray-400">Dinner is finished! Head over to the campsite's sauna and grill area for games and relaxation. See you there!</p>
                     </div>
+                    <div class="bg-gray-800 p-6 rounded-xl shadow-lg border-t-4 border-teal-500 lg:col-span-1">
+                        <p class="text-sm font-semibold text-teal-400 mb-2">October 1st, 09:55</p>
+                        <h3 class="text-xl font-bold text-white mb-2">Perfect Your Pitch!</h3>
+                        <p class="text-gray-400">
+                            Remember that a great idea needs a great presentation. Check out these useful tips for crafting a winning pitch: 
+                            <a href="https://drive.google.com/file/d/1kn615gRdJhFVZ5TFyaFSGhldKmzLDgio/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="text-teal-400 hover:underline">Pitch Presentation Guidelines (PDF)</a>
+                        </p>
+                        <div class="mt-4 p-3 bg-gray-700 rounded-lg">
+                            <h4 class="font-bold text-teal-400">What is an Elevator Pitch?</h4>
+                            <p class="text-gray-300 text-sm mt-1">
+                                An elevator pitch is a concise, persuasive summary of your project or idea that should take no longer than a short elevator ride (about 30–60 seconds). It should quickly communicate your project's problem, solution, and value proposition. Keep it brief, clear, and compelling!
+                            </p>
+                        </div>
+                    </div>
                     <div class="bg-gray-800 p-6 rounded-xl shadow-lg border-t-4 border-teal-500">
                         <p class="text-sm font-semibold text-teal-400 mb-2">September 30th, 9:30</p>
                         <h3 class="text-xl font-bold text-white mb-2">Hackathon officially started!</h3>
