--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-100">Uutiset (News)</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 text-left">
                     <div class="bg-gray-800 p-6 rounded-xl shadow-lg border-t-4 border-teal-500">
-                        <p class="text-sm font-semibold text-teal-400 mb-2">October 1st, 10:30</p>
-                        <h3 class="text-xl font-bold text-white mb-2">Presentations have started!</h3>
-                        <p class="text-gray-400">Teams are pitching their innovative solutions now. Good luck to all participants! Coffee is served in the main lobby.</p>
+                        <p class="text-sm font-semibold text-teal-400 mb-2">September 30th, 9:30</p>
+                        <h3 class="text-xl font-bold text-white mb-2">Hackathon officially started!</h3>
+                        <p class="text-gray-400">The company presentations are complete. Teams can now start working on their cases in the private meeting rooms.</p>
                     </div>
                     <div class="bg-gray-800 p-6 rounded-xl shadow-lg border-t-4 border-teal-500">
                         <p class="text-sm font-semibold text-teal-400 mb-2">September 30th, 19:30</p>
@@ -89,11 +89,11 @@
                                 An elevator pitch is a concise, persuasive summary of your project or idea that should take no longer than a short elevator ride (about 30–60 seconds). It should quickly communicate your project's problem, solution, and value proposition. Keep it brief, clear, and compelling!
                             </p>
                         </div>
-                    </div>
                     <div class="bg-gray-800 p-6 rounded-xl shadow-lg border-t-4 border-teal-500">
-                        <p class="text-sm font-semibold text-teal-400 mb-2">September 30th, 9:30</p>
-                        <h3 class="text-xl font-bold text-white mb-2">Hackathon officially started!</h3>
-                        <p class="text-gray-400">The company presentations are complete. Teams can now start working on their cases in the private meeting rooms.</p>
+                        <p class="text-sm font-semibold text-teal-400 mb-2">October 1st, 10:30</p>
+                        <h3 class="text-xl font-bold text-white mb-2">What's app Group created!</h3>
+                        <p class="text-gray-400">Teams are now can join the community and share their innovative solutions now. Good luck to all participants! Coffee is served in the main lobby.</p>
+                    </div>
                     </div>
                 </div>
             </div>
