--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                     <a href="#schedule" class="inline-block bg-gray-700 text-gray-200 font-semibold py-3 px-8 rounded-full shadow-lg transition-transform transform hover:scale-105 hover:bg-gray-600 focus:outline-none focus:ring-4 focus:ring-gray-500">
                         View Schedule
                     </a>
+                    <a href="https://kandamedia.pixieset.com/hackathonjamk/" target="_blank" class="px-6 py-3 bg-green-600 text-white rounded-lg shadow hover:bg-green-700">
+          Hackathon Photos
+        </a>
                 </div>
             </div>
         </section>
