--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- Hero Section -->
         <section id="hero" class="relative py-20 md:py-32 flex items-center justify-center text-center overflow-hidden">
             <div class="absolute inset-0">
-                <img src="https://i.ibb.co/LzYmXF5f/Gemini-Generated-Image-mxermsmxermsmxer.png" alt="A group of people working together in an office environment with a large window in the background." class="w-full h-full object-cover">                <div class="absolute inset-0 bg-gray-900 opacity-70"></div>
+                <img src="https://i.ibb.co/0p44HXMQ/Whats-App-Image-2025-10-01-at-09-39-03-1834642d.jpg" alt="A group of people working together in an office environment with a large window in the background." class="w-full h-full object-cover">                <div class="absolute inset-0 bg-gray-900 opacity-70"></div>
             </div>
             <div class="relative z-10 max-w-4xl mx-auto px-4 space-y-6">
                 <h1 class="text-5xl md:text-7xl font-extrabold leading-tight text-white tracking-tight">
